2010-08-23 Dan Locks <dwlocks@zmanda.com>
	*  packaging/deb/control: add ca-certificates and procps

2010-08-21  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/fileheader.c: remove incorrect validations for
	  CONT_FILENAME and APPLICATION

2010-08-20 Dan Locks <dwlocks@zmanda.com>
	*  The error fixed here was reported by ssgelm.
	*  packaging/common/substitute.pl: Use FULL_VERSION instead of
	   VERSION.
	*  packaging/rpm/amanda.spec.src: renamed from amanda.spec, added
	   %%VERSION%% macro for substitute.pl, fixed glib2 requires typo
	*  packaging/rpm/buildpkg: refactored into "do_thing" functions, added
	   substitute.pl machinery.

2010-08-20 Dan Locks <dwlocks@zmanda.com>
	*  packaging/rpm/amanda.spec: add openSuSE 11 detection and
	   buildrequires glib2-devel, as written by ssgelm

2010-08-13  Dustin J. Mitchell <dustin@zmanda.com>
	* config/amanda/debugging.m4: make the default for syntax-checks
	  "disabled", add a warning when enabling
	* perl/Makefile.am config/automake/scripts.am: don't do any checks
	  that require linking perl extension modules unless SYNTAX_CHECKS is
	  set
	* installcheck/Makefile.am: always skip syntax checks
	* application-src/amlog-script.pl application-src/amraw.pl
	  application-src/amsamba.pl application-src/amsuntar.pl
	  application-src/amzfs-sendrecv.pl application-src/amzfs-snapshot.pl
	  application-src/script-email.pl common-src/amgetconf.pl
	  device-src/amdevcheck.pl device-src/amtapetype.pl
	  installcheck/Amanda_Changer.pl installcheck/Amanda_Changer_ndmp.pl
	  installcheck/Amanda_Changer_null.pl
	  installcheck/Amanda_Changer_rait.pl
	  installcheck/Amanda_Changer_robot.pl
	  installcheck/Amanda_Changer_single.pl installcheck/Amanda_Cmdline.pl
	  installcheck/Amanda_Config.pl installcheck/Amanda_Curinfo.pl
	  installcheck/Amanda_Debug.pl installcheck/Amanda_Device.pl
	  installcheck/Amanda_Disklist.pl installcheck/Amanda_Feature.pl
	  installcheck/Amanda_Header.pl installcheck/Amanda_Logfile.pl