@@ -1,3 +1,7 @@
+2010-08-23  Dustin J. Mitchell <dustin@zmanda.com>
+	* server-src/amvault.pl: add --fulls-only option
+	* man/xml-source/amvault.8.xml: document
+
 2010-08-23 Dan Locks <dwlocks@zmanda.com>
 	*  packaging/deb/control: add ca-certificates and procps
 
